--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@mantine/notifications": "^7.11.0",
     "@netlify/functions": "^2.6.0",
     "@netlify/remix-adapter": "^2.3.1",
+    "@prisma/client": "^5.16.1",
     "@remix-run/node": "^2.10.0",
     "@remix-run/react": "^2.10.0",
     "@remix-run/serve": "^2.10.0",
@@ -27,6 +28,7 @@
   },
   "devDependencies": {
     "@remix-run/dev": "^2.10.0",
+    "@types/node": "^20.14.9",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.7.4",
@@ -40,11 +42,19 @@
     "postcss": "^8.4.38",
     "postcss-preset-mantine": "^1.15.0",
     "postcss-simple-vars": "^7.0.1",
-    "typescript": "^5.1.6",
+    "prisma": "^5.16.1",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.5.2",
     "vite": "^5.0.0",
     "vite-tsconfig-paths": "^4.2.1"
   },
   "engines": {
     "node": ">=18.0.0"
-  }
+  },
+  "description": "- [Remix Docs](https://remix.run/docs) - [Netlify Functions Overview](https://docs.netlify.com/functions/overview)",
+  "version": "1.0.0",
+  "main": "index.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
