--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "@netlify/functions": "^2.6.0",
     "@netlify/remix-adapter": "^2.3.1",
     "@prisma/client": "^5.16.1",
+    "@remix-run/css-bundle": "^2.10.0",
     "@remix-run/node": "^2.10.0",
     "@remix-run/react": "^2.10.0",
     "@remix-run/serve": "^2.10.0",
     "dayjs": "^1.11.11",
-    "isbot": "^4.1.0"
+    "isbot": "^4.1.0",
+    "react-icons": "^5.2.1"
   },
   "devDependencies": {
     "@remix-run/dev": "^2.10.0",
