--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "bcryptjs": "^2.4.3",
     "dayjs": "^1.11.11",
     "isbot": "^4.1.0",
-    "react-icons": "^5.2.1"
+    "react-icons": "^5.2.1",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@remix-run/dev": "^2.10.0",
