--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "@remix-run/serve": "^2.10.0",
     "bcryptjs": "^2.4.3",
     "dayjs": "^1.11.11",
+    "handlebars": "^4.7.8",
     "isbot": "^4.1.0",
+    "mailgun.js": "^10.2.1",
     "react-icons": "^5.2.1",
     "zod": "^3.23.8"
   },
