--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "prisma generate && remix vite:build",
     "dev": "remix vite:dev",
     "lint": "eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
-    "start": "node server.js",
+    "start": "remix-serve build",
     "typecheck": "tsc"
   },
   "dependencies": {
